--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Cristina Wood
 
 # Short bio or description (displayed in the header)
-description: Struggling to understand
+description: Embracing Digital Humanities
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
