--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Cristina Wood
 description: Embracing Digital Humanities
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/32402600?s=460&v=4
 
 #
 # Flags below are optional
